--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 
 <body>
     <h1>Welcome to JS Games</h1>
-    <a href="fishing.js/ai-game-aistudio.html">Fishing Game</a>
-    <a href="space-invasion.js/ai_studio-index.html">Space Invasion Game</a>
+    <a href="js_games/fishing.js/ai-game-aistudio.html">Fishing Game</a>
+    <a href="js_games/space-invasion.js/ai_studio-index.html">Space Invasion Game</a>
 </body>
 
 </html>
